--- a/app.html
+++ b/app.html
@@ -247,6 +247,28 @@
                         <p class="price"></p>
                     </div>
                 </div>
+                <div class="col-xs-12">
+                    <div class="hidden-it">
+                        <div class="detailes-video app-detailes">
+                            <h3 class="title1">Android</h3>
+                            <p class="day1">6</p>
+                            <p class="minute1">YES</p>
+                            <p class="price1">50000</p>
+                        </div>
+                        <div class="detailes-video app-detailes">
+                            <h3 class="title2">iOS</h3>
+                            <p class="day2">7</p>
+                            <p class="minute2">No</p>
+                            <p class="price2">60000</p>
+                        </div>
+                        <div class="detailes-video app-detailes">
+                            <h3 class="title3">Android & iOS</h3>
+                            <p class="day3">8</p>
+                            <p class="minute3">YES</p>
+                            <p class="price3">70000</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
