--- a/ecommerce.html
+++ b/ecommerce.html
@@ -146,14 +146,14 @@
                 <div class="col-md-6 col-sm-6 videos-item">
                     <div class="just-thumbnail"><img src="images/ecomerce-service-1.png" alt="" class="img-responsive"></div>
                     <div class="type-button">
-                        <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
+                        <a class="type-button-link-1 current" href="javascript:void(0);">Online Store</a>
                     </div>
                     <p>My store front only.</p>
                 </div>
                 <div class="col-md-6 col-sm-6 videos-item">
                     <div class="just-thumbnail"><img src="images/ecomerce-service-2.png" alt="" class="img-responsive"></div>
                     <div class="type-button">
-                        <a class="type-button-link-2" href="javascript:void(0);">3D Animation</a>
+                        <a class="type-button-link-2" href="javascript:void(0);">MarketPlace</a>
                     </div>
                     <p>Multiple sellers, multiple store fronts</p>
                 </div>
@@ -228,6 +228,20 @@
                         <p class="minute"></p>
                         <h4>Esrimated Price</h4>
                         <p class="price"></p>
+                    </div>
+                </div>
+                <div class="hidden-it">
+                    <div class="detailes-video app-detailes">
+                        <h3 class="title1">Online Store</h3>
+                        <p class="day1">6</p>
+                        <p class="minute1">YES</p>
+                        <p class="price1">50000</p>
+                    </div>
+                    <div class="detailes-video app-detailes">
+                        <h3 class="title2">MarketPlace</h3>
+                        <p class="day2">7</p>
+                        <p class="minute2">No</p>
+                        <p class="price2">60000</p>
                     </div>
                 </div>
             </div>
