--- a/videos.html
+++ b/videos.html
@@ -249,6 +249,26 @@
                         <p class="price"></p>
                     </div>
                 </div>
+                <div class="hidden-it">
+                    <div class="detailes-video app-detailes">
+                        <h3 class="title1">2D Animation</h3>
+                        <p class="day1">6</p>
+                        <p class="minute1">YES</p>
+                        <p class="price1">50000</p>
+                    </div>
+                    <div class="detailes-video app-detailes">
+                        <h3 class="title2">3D Animation</h3>
+                        <p class="day2">7</p>
+                        <p class="minute2">No</p>
+                        <p class="price2">60000</p>
+                    </div>
+                    <div class="detailes-video app-detailes">
+                        <h3 class="title3">Whiteboard</h3>
+                        <p class="day3">8</p>
+                        <p class="minute3">YES</p>
+                        <p class="price3">70000</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
