--- a/videos.html
+++ b/videos.html
@@ -154,7 +154,7 @@
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-1 menu-test current" href="javascript:void(0);">2D Animation</a>
+                        <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 videos-item">
@@ -163,7 +163,7 @@
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-2 menu-test" href="javascript:void(0);">3D Animation</a>
+                        <a class="type-button-link-2" href="javascript:void(0);">3D Animation</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 videos-item">
@@ -172,7 +172,7 @@
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-3 menu-test" href="javascript:void(0);">Whiteboard</a>
+                        <a class="type-button-link-3" href="javascript:void(0);">Whiteboard</a>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                                     <div class="formbg"></div>
                                     <input autocomplete="off" id="name" name="name" type="text" class="input">
                                 </div>
-                                <div class="text-field text select-type">
+                                <div class="text-field text select-type current">
                                     <select class="video-select-type">
                                         <option value='the_title_value1'>2D Animation</option>
                                         <option value='the_title_value2'>3D Animation</option>
