--- a/branding.html
+++ b/branding.html
@@ -61,7 +61,7 @@
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Ecommerce </h2>
+                    <h2><span>corporate</span> branding </h2>
                 </div>
             </div>
         </div>
