--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--    /*================ Banner ================*/-->
-    <section class="banner">
+    <section class="banner wow fadeIn" data-wow-duration="2s">
         <div class="container relative">
             <div class="row">
                 <div class="col-md-12">
@@ -67,7 +68,7 @@
         </div>
     </section>
     <!--    /*================ Banner bottom ================*/-->
-    <section class="banner-bootom">
+    <section class="banner-bootom wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -81,13 +82,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="head">
+                    <div class="head wow fadeIn" data-wow-duration="2s">
                         <h2>Our Services</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-1.png" alt="" class="img-responsive">
@@ -96,7 +97,7 @@
                         <p>Development</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-2.png" alt="" class="img-responsive">
@@ -105,7 +106,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-3.png" alt="" class="img-responsive">
@@ -114,7 +115,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-4.png" alt="" class="img-responsive">
@@ -123,7 +124,7 @@
                         <p>Animation Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-5.png" alt="" class="img-responsive">
@@ -132,7 +133,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-6.png" alt="" class="img-responsive">
@@ -145,7 +146,7 @@
         </div>
     </section>
     <!--    /*================ Service Request ================*/-->
-    <section class="service-request">
+    <section class="service-request wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -213,6 +214,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
