--- a/app.html
+++ b/app.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--    /*================ Banner ================*/-->
-    <section class="banner">
+    <section class="banner wow fadeIn" data-wow-duration="2s">
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
@@ -66,7 +67,7 @@
             </div>
         </div>
     </section>
-    <section class="reviwes video-reviews">
+    <section class="reviwes video-reviews wow fadeIn" data-wow-duration="2s">
         <div class="container relative">
             <div class="row">
                 <div class="col-md-10 col-md-offset-2 col-xs-12">
@@ -113,7 +114,7 @@
         </div>
     </section>
     <!--    /*================ Video ================*/-->
-    <section class="ecommerce-store app-style">
+    <section class="ecommerce-store app-style wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row disply-flex">
                 <div class="col-md-5 col-sm-6">
@@ -124,7 +125,7 @@
         </div>
     </section>
     <!--    /*================ Banner bottom ================*/-->
-    <section class="banner-bootom video-banner-text">
+    <section class="banner-bootom video-banner-text wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -140,7 +141,7 @@
     <section class="video-type clearfix">
         <div class="container">
             <div class="row vides-wraper">
-                <div class="col-md-4 col-sm-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
                             <img src="images/android.png" class="img-responsive" alt="">
@@ -151,7 +152,7 @@
                         <a class="type-button-link-1 current" href="javascript:void(0);">Android</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
                             <img src="images/apple.png" class="img-responsive" alt="">
@@ -162,7 +163,7 @@
                         <a class="type-button-link-2" href="javascript:void(0);">iOS</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
                             <img src="images/android&app.png" class="img-responsive" alt="">
@@ -176,7 +177,7 @@
             </div>
         </div>
     </section>
-    <section class="contact video-form">
+    <section class="contact video-form wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row form-padding-wraper">
                 <div class="col-md-8 col-sm-8 no-padding">
@@ -329,6 +330,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
