--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--    /*================ Banner ================*/-->
-    <section class="banner">
+    <section class="banner wow fadeIn" data-wow-duration="2s">
         <div class="container relative">
             <div class="row">
                 <div class="col-md-12">
@@ -67,7 +68,7 @@
         </div>
     </section>
     <!--    /*================ Banner bottom ================*/-->
-    <section class="banner-bootom">
+    <section class="banner-bootom wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -77,7 +78,7 @@
         </div>
     </section>
     <!--    /*================ Contact ================*/-->
-    <section class="contact">
+    <section class="contact wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <form action="#">
@@ -132,7 +133,7 @@
             </div>
         </div>
     </section>
-    <section class="contact-address">
+    <section class="contact-address wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-3">
@@ -222,6 +223,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
