--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -72,7 +73,7 @@
         </div>
     </section>
     <!--    /*================ Banner bottom ================*/-->
-    <section class="banner-bootom">
+    <section class="banner-bootom wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -82,7 +83,7 @@
         </div>
     </section>
     <!--    /*================ Video ================*/-->
-    <section class="video">
+    <section class="video wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 flex">
@@ -98,13 +99,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="head">
+                    <div class="head wow fadeIn" data-wow-duration="2s">
                         <h2>Choose to get started...</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-1.png" alt="" class="img-responsive">
@@ -113,7 +114,7 @@
                         <p>Development</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-2.png" alt="" class="img-responsive">
@@ -122,7 +123,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-3.png" alt="" class="img-responsive">
@@ -131,7 +132,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-4.png" alt="" class="img-responsive">
@@ -140,7 +141,7 @@
                         <p>Animation Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-5.png" alt="" class="img-responsive">
@@ -149,7 +150,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-6.png" alt="" class="img-responsive">
@@ -162,7 +163,7 @@
         </div>
     </section>
     <!--    /*================ Reviews ================*/-->
-    <section class="reviwes">
+    <section class="reviwes wow fadeIn" data-wow-duration="2s">
         <div class="container relative">
             <div class="row">
                 <div class="col-md-10 col-md-offset-2 col-xs-12">
@@ -213,25 +214,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="head">
+                    <div class="head wow fadeIn" data-wow-duration="2s">
                         <h2>How it works in 3 Steps</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content">
                         <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
                         <h3>Click on the required service</h3>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content">
                         <div class="img"><img src="images/work-2.png" alt="" class="img-responsive"></div>
                         <h3>Fill up the <br> required details</h3>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content">
                         <div class="img"><img src="images/work-3.png" alt="" class="img-responsive"></div>
                         <h3>You’ll hear from us <br>sooner than 24 hours</h3>
@@ -298,6 +299,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
