--- a/mail-sent.html
+++ b/mail-sent.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--    /*================ Banner ================*/-->
-    <section class="banner">
+    <section class="banner wow fadeIn" data-wow-duration="2s">
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
@@ -67,7 +68,7 @@
         </div>
     </section>
 <!--    /*================ Request send ================*/-->
-   <section class="request-send">
+   <section class="request-send wow fadeIn" data-wow-duration="2s">
        <div class="container">
            <div class="row">
                <div class="col-xs-12">
@@ -93,25 +94,25 @@
             <div class="content-wraper">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="title">
+                        <div class="title wow fadeIn" data-wow-duration="2s">
                             <h2>Browse more Services</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-sm-4 content">
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                         <div class="text-center">
                             <img src="images/port-1.jpg" alt="">
                             <a href="#" class="link">Mobile App</a>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 content">
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                         <div class="text-center">
                             <img src="images/port-1.jpg" alt="">
                             <a href="#" class="link">Mobile App</a>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 content">
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                         <div class="text-center">
                             <img src="images/port-1.jpg" alt="">
                             <a href="#" class="link">Mobile App</a>
@@ -179,6 +180,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
