--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--    /*================ Banner ================*/-->
-    <section class="banner">
+    <section class="banner wow fadeIn" data-wow-duration="2s">
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
@@ -78,7 +79,7 @@
                    </div>
                </div>
                <div class="row">
-                   <div class="col-md-4 col-sm-4 content">
+                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                        <div class="text-center">
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
                                <img src="images/port-1.jpg" alt="">
@@ -86,7 +87,7 @@
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
                        </div>
                    </div>
-                   <div class="col-md-4 col-sm-4 content">
+                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                        <div class="text-center">
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
                                <img src="images/port-1.jpg" alt="">
@@ -94,7 +95,7 @@
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
                        </div>
                    </div>
-                   <div class="col-md-4 col-sm-4 content">
+                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                        <div class="text-center">
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
                                <img src="images/port-1.jpg" alt="">
@@ -107,13 +108,13 @@
            <div class="content-wraper">
                <div class="row">
                    <div class="col-xs-12">
-                       <div class="title">
+                       <div class="title wow fadeIn" data-wow-duration="2s">
                            <h2>Mobile App</h2>
                        </div>
                    </div>
                </div>
                <div class="row">
-                   <div class="col-md-4 col-sm-4 content">
+                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                        <div class="text-center">
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
                                <img src="images/port-1.jpg" alt="">
@@ -121,7 +122,7 @@
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
                        </div>
                    </div>
-                   <div class="col-md-4 col-sm-4 content">
+                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                        <div class="text-center">
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
                                <img src="images/port-1.jpg" alt="">
@@ -129,7 +130,7 @@
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
                        </div>
                    </div>
-                   <div class="col-md-4 col-sm-4 content">
+                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
                        <div class="text-center">
                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
                                <img src="images/port-1.jpg" alt="">
@@ -199,6 +200,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
