--- a/soluation.html
+++ b/soluation.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--    /*================ Banner ================*/-->
-    <section class="banner">
+    <section class="banner wow fadeIn" data-wow-duration="2s">
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
@@ -66,7 +67,7 @@
             </div>
         </div>
     </section>
-    <section class="reviwes video-reviews">
+    <section class="reviwes video-reviews wow fadeIn" data-wow-duration="2s">
         <div class="container relative">
             <div class="row">
                 <div class="col-md-10 col-md-offset-2 col-xs-12">
@@ -113,7 +114,7 @@
         </div>
     </section>
     <!--    /*================ Video ================*/-->
-    <section class="ecommerce-store app-style soluation-banner">
+    <section class="ecommerce-store app-style soluation-banner wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row disply-flex">
                 <div class="col-md-5 col-sm-6">
@@ -124,7 +125,7 @@
         </div>
     </section>
     <!--    /*================ Banner bottom ================*/-->
-    <section class="banner-bootom video-banner-text">
+    <section class="banner-bootom video-banner-text wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -138,7 +139,7 @@
     </section>
     <!--    /*================ Video Types ================*/-->
 
-    <section class="contact video-form">
+    <section class="contact video-form wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row form-padding-wraper">
                 <div class="col-xs-12 no-padding">
@@ -266,6 +267,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
