--- a/videos.html
+++ b/videos.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--    /*================ Banner ================*/-->
-    <section class="banner">
+    <section class="banner wow fadeIn" data-wow-duration="2s">
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
@@ -66,7 +67,7 @@
             </div>
         </div>
     </section>
-    <section class="reviwes video-reviews">
+    <section class="reviwes video-reviews wow fadeIn" data-wow-duration="2s">
         <div class="container relative">
             <div class="row">
                 <div class="col-md-10 col-md-offset-2 col-xs-12">
@@ -113,7 +114,7 @@
         </div>
     </section>
     <!--    /*================ Video ================*/-->
-    <section class="video video-inner">
+    <section class="video video-inner wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 flex">
@@ -125,7 +126,7 @@
         </div>
     </section>
     <!--    /*================ Banner bottom ================*/-->
-    <section class="banner-bootom video-banner-text">
+    <section class="banner-bootom video-banner-text wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
@@ -142,13 +143,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="head">
+                    <div class="head wow fadeIn" data-wow-duration="2s">
                         <h2>Watch Sample Animation Videos</h2>
                     </div>
                 </div>
             </div>
             <div class="row vides-wraper">
-                <div class="col-md-4 col-sm-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
@@ -157,7 +158,7 @@
                         <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
@@ -166,7 +167,7 @@
                         <a class="type-button-link-2" href="javascript:void(0);">3D Animation</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
@@ -178,7 +179,7 @@
             </div>
         </div>
     </section>
-    <section class="contact video-form">
+    <section class="contact video-form wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row form-padding-wraper">
                 <div class="col-md-8 col-sm-8 no-padding">
@@ -331,6 +332,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
