--- a/about.html
+++ b/about.html
@@ -89,58 +89,58 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-1.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Website</h3>
-                        <p>Development</p>
-                    </div>
+                    <a href="website.html"><div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-1.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Website</h3>
+                            <p>Development</p>
+                        </div></a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-2.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Mobile Apps</h3>
-                        <p>Design</p>
-                    </div>
+                    <a href="app.html"><div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-2.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Mobile Apps</h3>
+                            <p>Design</p>
+                        </div></a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-3.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>E-Commerce</h3>
-                        <p>Design</p>
-                    </div>
+                    <a href="ecommerce.html"><div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-3.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>E-Commerce</h3>
+                            <p>Design</p>
+                        </div></a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-4.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Video</h3>
-                        <p>Animation Design</p>
-                    </div>
+                    <a href="videos.html"><div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-4.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Video</h3>
+                            <p>Animation Design</p>
+                        </div></a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-5.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Branding</h3>
-                        <p>Design</p>
-                    </div>
+                    <a href="branding.html"><div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-5.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Branding</h3>
+                            <p>Design</p>
+                        </div></a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-6.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Solutions</h3>
-                        <p>Design</p>
-                    </div>
+                    <a href="soluation.html"><div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-6.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Solutions</h3>
+                            <p>Design</p>
+                        </div></a>
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <p>For more detail about us, kindly click below to request <br> our company profile.</p>
-                    <a href="#" class="btn">Request for Profile</a>
+                    <a href="contact.html" class="btn">Request for Profile</a>
                 </div>
             </div>
         </div>
@@ -172,8 +172,8 @@
                         <div class="col-md-6 no-padding content" style="min-height:auto;">
                             <h4>Social Media</h4>
                             <ul class="social">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/specialmansolution/"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/SGSGlobal"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
@@ -183,22 +183,21 @@
                     <div class="col-md-7 no-padding list">
                         <h4>Our Service</h4>
                         <ul>
-                            <li><a href="#">Website </a></li>
-                            <li><a href="#">Mobile App</a></li>
-                            <li><a href="#">E-commerce</a></li>
-                            <li><a href="#">Promotional Video</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Custom Solution</a></li>
+                            <li><a href="website.html">Website </a></li>
+                            <li><a href="app.html">Mobile App</a></li>
+                            <li><a href="ecommerce.html">E-commerce</a></li>
+                            <li><a href="videos.html">Promotional Video</a></li>
+                            <li><a href="branding.html">Branding</a></li>
+                            <li><a href="soluation.html">Custom Solution</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5 no-padding list">
                         <h4>Quick Link</h4>
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio </a></li>
-                            <li><a href="#">About Us </a></li>
-                            <li><a href="#">Blog </a></li>
-                            <li><a href="#">Support </a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us </a></li>
+                            <li><a href="portfolio.html">Portfolio </a></li>
+                            <li><a href="contact.html">Contact </a></li>
                         </ul>
                     </div>
                 </div>
