--- a/contact.html
+++ b/contact.html
@@ -122,11 +122,9 @@
                             <textarea type="text" class="input" id="description" name="description"></textarea>
                         </div>
                     </div>
-                    <div class="col-md-12 col-xs-12 clearfix">
-                        <div class="text-field send">
-                            <div class="lines"></div>
-                            <div class="formbg"></div>
-                            <input autocomplete="off" id="name" name="name" value="Send" type="submit" class="input submit">
+                    <div class="col-md-12 col-xs-12 clearfix video-form">
+                        <div class="send" id="contact-send">
+                            <input autocomplete="off" id="name" name="name" value="Send it over" type="submit" class="input submit">
                         </div>
                     </div>
                 </form>
@@ -181,8 +179,8 @@
                         <div class="col-md-6 no-padding content" style="min-height:auto;">
                             <h4>Social Media</h4>
                             <ul class="social">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/specialmansolution/"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/SGSGlobal"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
@@ -192,22 +190,21 @@
                     <div class="col-md-7 no-padding list">
                         <h4>Our Service</h4>
                         <ul>
-                            <li><a href="#">Website </a></li>
-                            <li><a href="#">Mobile App</a></li>
-                            <li><a href="#">E-commerce</a></li>
-                            <li><a href="#">Promotional Video</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Custom Solution</a></li>
+                            <li><a href="website.html">Website </a></li>
+                            <li><a href="app.html">Mobile App</a></li>
+                            <li><a href="ecommerce.html">E-commerce</a></li>
+                            <li><a href="videos.html">Promotional Video</a></li>
+                            <li><a href="branding.html">Branding</a></li>
+                            <li><a href="soluation.html">Custom Solution</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5 no-padding list">
                         <h4>Quick Link</h4>
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio </a></li>
-                            <li><a href="#">About Us </a></li>
-                            <li><a href="#">Blog </a></li>
-                            <li><a href="#">Support </a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us </a></li>
+                            <li><a href="portfolio.html">Portfolio </a></li>
+                            <li><a href="contact.html">Contact </a></li>
                         </ul>
                     </div>
                 </div>
