--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="heading">
                         <h1>Excellent Delivery <br> & Time Concious <br> with every</h1>
                         <h2>Project </h2>
-                        <a href="#" class="button btn">Begin Here</a>
+                        <a href="#get-started" class="button btn">Begin Here</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <div class="col-xs-12 flex">
                     <h2>Watch Our <br> Delivery Model <br> in Details</h2>
                     <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                    
+
                 </div>
             </div>
         </div>
@@ -99,65 +99,77 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="head wow fadeIn" data-wow-duration="2s">
+                    <div id="get-started" class="head wow fadeIn" data-wow-duration="2s">
                         <h2>Choose to get started...</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-1.png" alt="" class="img-responsive">
+                    <a href="website.html">
+                        <div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-1.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Website</h3>
+                            <p>Development</p>
                         </div>
-                        <h3>Custom Website</h3>
-                        <p>Development</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-2.png" alt="" class="img-responsive">
+                    <a href="app.html">
+                        <div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-2.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Mobile Apps</h3>
+                            <p>Design</p>
                         </div>
-                        <h3>Custom Mobile Apps</h3>
-                        <p>Design</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-3.png" alt="" class="img-responsive">
+                    <a href="ecommerce.html">
+                        <div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-3.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>E-Commerce</h3>
+                            <p>Design</p>
                         </div>
-                        <h3>E-Commerce</h3>
-                        <p>Design</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-4.png" alt="" class="img-responsive">
+                    <a href="videos.html">
+                        <div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-4.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Video</h3>
+                            <p>Animation Design</p>
                         </div>
-                        <h3>Custom Video</h3>
-                        <p>Animation Design</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-5.png" alt="" class="img-responsive">
+                    <a href="branding.html">
+                        <div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-5.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Branding</h3>
+                            <p>Design</p>
                         </div>
-                        <h3>Branding</h3>
-                        <p>Design</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-6.png" alt="" class="img-responsive">
+                    <a href="soluation.html">
+                        <div class="content text-center">
+                            <div class="img">
+                                <img src="images/service-6.png" alt="" class="img-responsive">
+                            </div>
+                            <h3>Custom Solutions</h3>
+                            <p>Design</p>
                         </div>
-                        <h3>Custom Solutions</h3>
-                        <p>Design</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -221,10 +233,12 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
-                    <div class="content">
-                        <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
-                        <h3>Click on the required service</h3>
-                    </div>
+                    <a href="#get-started">
+                        <div class="content">
+                            <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
+                            <h3>Click on the required service</h3>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-duration="2s">
                     <div class="content">
@@ -257,8 +271,8 @@
                         <div class="col-md-6 no-padding content" style="min-height:auto;">
                             <h4>Social Media</h4>
                             <ul class="social">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/specialmansolution/"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/SGSGlobal"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
@@ -268,22 +282,21 @@
                     <div class="col-md-7 no-padding list">
                         <h4>Our Service</h4>
                         <ul>
-                            <li><a href="#">Website </a></li>
-                            <li><a href="#">Mobile App</a></li>
-                            <li><a href="#">E-commerce</a></li>
-                            <li><a href="#">Promotional Video</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Custom Solution</a></li>
+                            <li><a href="website.html">Website </a></li>
+                            <li><a href="app.html">Mobile App</a></li>
+                            <li><a href="ecommerce.html">E-commerce</a></li>
+                            <li><a href="videos.html">Promotional Video</a></li>
+                            <li><a href="branding.html">Branding</a></li>
+                            <li><a href="soluation.html">Custom Solution</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5 no-padding list">
                         <h4>Quick Link</h4>
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio </a></li>
-                            <li><a href="#">About Us </a></li>
-                            <li><a href="#">Blog </a></li>
-                            <li><a href="#">Support </a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us </a></li>
+                            <li><a href="portfolio.html">Portfolio </a></li>
+                            <li><a href="contact.html">Contact </a></li>
                         </ul>
                     </div>
                 </div>
