--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
+    <link href="css/magnific-popup.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -66,82 +67,82 @@
                 </div>
             </div>
         </div>
-    </section>    
-<!--    /*================ Portfolio ================*/-->
-   <section class="portfolio">
-       <div class="container">
-           <div class="content-wraper">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="title">
-                           <h2>Promotional video</h2>
-                       </div>
-                   </div>
-               </div>
-               <div class="row">
-                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
-                       <div class="text-center">
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
+    </section>
+    <!--    /*================ Portfolio ================*/-->
+    <section class="portfolio">
+        <div class="container">
+            <div class="content-wraper">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="head-2">
+                            <h2>Promotional video</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
+                        <div class="text-center">
+                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
                                <img src="images/port-1.jpg" alt="">
                            </a>
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
-                       </div>
-                   </div>
-                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
-                       <div class="text-center">
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
+                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
+                        <div class="text-center">
+                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
+                               <img src="images/port-2.jpg" alt="">
+                           </a>
+                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">Value Tech</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
+                        <div class="text-center">
+                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
+                               <img src="images/port-3.jpg" alt="">
+                           </a>
+                            <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">Style</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content-wraper">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="head-2 wow fadeIn" data-wow-duration="2s">
+                            <h2>Mobile App</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
+                        <div class="text-center">
+                            <a href="images/port-1.jpg" class="image-link">
                                <img src="images/port-1.jpg" alt="">
                            </a>
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
-                       </div>
-                   </div>
-                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
-                       <div class="text-center">
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
-                               <img src="images/port-1.jpg" alt="">
+                            <a href="#" class="play link">Mobile App</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
+                        <div class="text-center">
+                            <a href="images/port-3.jpg" class="image-link">
+                               <img src="images/port-3.jpg" alt="">
                            </a>
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
-                       </div>
-                   </div>
-               </div>
-           </div>
-           <div class="content-wraper">
-               <div class="row">
-                   <div class="col-xs-12">
-                       <div class="title wow fadeIn" data-wow-duration="2s">
-                           <h2>Mobile App</h2>
-                       </div>
-                   </div>
-               </div>
-               <div class="row">
-                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
-                       <div class="text-center">
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
-                               <img src="images/port-1.jpg" alt="">
+                            <a href="#" class="play link">E-commerce</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
+                        <div class="text-center">
+                            <a href="images/port-2.jpg" class="image-link">
+                               <img src="images/port-2.jpg" alt="">
                            </a>
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
-                       </div>
-                   </div>
-                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
-                       <div class="text-center">
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
-                               <img src="images/port-1.jpg" alt="">
-                           </a>
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
-                       </div>
-                   </div>
-                   <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
-                       <div class="text-center">
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play">
-                               <img src="images/port-1.jpg" alt="">
-                           </a>
-                           <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play link">MadAct</a>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </section>
+                            <a href="#" class="play link">Business Branding</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--    /*================ Footer ================*/-->
     <footer class="main-footer">
         <div class="container">
@@ -158,8 +159,8 @@
                         <div class="col-md-6 no-padding content" style="min-height:auto;">
                             <h4>Social Media</h4>
                             <ul class="social">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/specialmansolution/"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/SGSGlobal"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
@@ -169,22 +170,21 @@
                     <div class="col-md-7 no-padding list">
                         <h4>Our Service</h4>
                         <ul>
-                            <li><a href="#">Website </a></li>
-                            <li><a href="#">Mobile App</a></li>
-                            <li><a href="#">E-commerce</a></li>
-                            <li><a href="#">Promotional Video</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Custom Solution</a></li>
+                            <li><a href="website.html">Website </a></li>
+                            <li><a href="app.html">Mobile App</a></li>
+                            <li><a href="ecommerce.html">E-commerce</a></li>
+                            <li><a href="videos.html">Promotional Video</a></li>
+                            <li><a href="branding.html">Branding</a></li>
+                            <li><a href="soluation.html">Custom Solution</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5 no-padding list">
                         <h4>Quick Link</h4>
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio </a></li>
-                            <li><a href="#">About Us </a></li>
-                            <li><a href="#">Blog </a></li>
-                            <li><a href="#">Support </a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us </a></li>
+                            <li><a href="portfolio.html">Portfolio </a></li>
+                            <li><a href="contact.html">Contact </a></li>
                         </ul>
                     </div>
                 </div>
@@ -200,6 +200,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
+    <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
     <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
