--- a/soluation.html
+++ b/soluation.html
@@ -225,8 +225,8 @@
                         <div class="col-md-6 no-padding content" style="min-height:auto;">
                             <h4>Social Media</h4>
                             <ul class="social">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/specialmansolution/"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/SGSGlobal"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
@@ -236,22 +236,21 @@
                     <div class="col-md-7 no-padding list">
                         <h4>Our Service</h4>
                         <ul>
-                            <li><a href="#">Website </a></li>
-                            <li><a href="#">Mobile App</a></li>
-                            <li><a href="#">E-commerce</a></li>
-                            <li><a href="#">Promotional Video</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Custom Solution</a></li>
+                            <li><a href="website.html">Website </a></li>
+                            <li><a href="app.html">Mobile App</a></li>
+                            <li><a href="ecommerce.html">E-commerce</a></li>
+                            <li><a href="videos.html">Promotional Video</a></li>
+                            <li><a href="branding.html">Branding</a></li>
+                            <li><a href="soluation.html">Custom Solution</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5 no-padding list">
                         <h4>Quick Link</h4>
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio </a></li>
-                            <li><a href="#">About Us </a></li>
-                            <li><a href="#">Blog </a></li>
-                            <li><a href="#">Support </a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us </a></li>
+                            <li><a href="portfolio.html">Portfolio </a></li>
+                            <li><a href="contact.html">Contact </a></li>
                         </ul>
                     </div>
                 </div>
