--- a/app.html
+++ b/app.html
@@ -141,7 +141,7 @@
     <section class="video-type clearfix">
         <div class="container">
             <div class="row vides-wraper">
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item1 current wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
                             <img src="images/android.png" class="img-responsive" alt="">
@@ -149,10 +149,10 @@
                         <img src="images/app-service-1.jpg" class="img-responsive" alt="">
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-1 current" href="javascript:void(0);">Android</a>
+                        <a class="type-button-link-1" href="javascript:void(0);">Android</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item2  wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
                             <img src="images/apple.png" class="img-responsive" alt="">
@@ -163,7 +163,7 @@
                         <a class="type-button-link-2" href="javascript:void(0);">iOS</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item3 wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
                             <img src="images/android&app.png" class="img-responsive" alt="">
