--- a/ecommerce.html
+++ b/ecommerce.html
@@ -144,14 +144,14 @@
     <section class="video-type clearfix wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row vides-wraper">
-                <div class="col-md-6 col-sm-6 videos-item">
+                <div class="col-md-6 col-sm-6 videos-item item1 current">
                     <div class="just-thumbnail"><img src="images/ecomerce-service-1.png" alt="" class="img-responsive"></div>
                     <div class="type-button">
-                        <a class="type-button-link-1 current" href="javascript:void(0);">Online Store</a>
+                        <a class="type-button-link-1" href="javascript:void(0);">Online Store</a>
                     </div>
                     <p>My store front only.</p>
                 </div>
-                <div class="col-md-6 col-sm-6 videos-item">
+                <div class="col-md-6 col-sm-6 videos-item item2">
                     <div class="just-thumbnail"><img src="images/ecomerce-service-2.png" alt="" class="img-responsive"></div>
                     <div class="type-button">
                         <a class="type-button-link-2" href="javascript:void(0);">MarketPlace</a>
