--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link href="css/magnific-popup.css" rel="stylesheet">
+    <link href="css/viewbox.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -120,7 +120,7 @@
                             <a href="images/port-1.jpg" class="image-link">
                                <img src="images/port-1.jpg" alt="">
                            </a>
-                            <a href="#" class="play link">Mobile App</a>
+                            <a href="app.html" class="play link">Mobile App</a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
@@ -128,7 +128,7 @@
                             <a href="images/port-3.jpg" class="image-link">
                                <img src="images/port-3.jpg" alt="">
                            </a>
-                            <a href="#" class="play link">E-commerce</a>
+                            <a href="ecommerce.html" class="play link">E-commerce</a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4 content wow fadeIn" data-wow-duration="2s">
@@ -136,7 +136,7 @@
                             <a href="images/port-2.jpg" class="image-link">
                                <img src="images/port-2.jpg" alt="">
                            </a>
-                            <a href="#" class="play link">Business Branding</a>
+                            <a href="branding.html" class="play link">Business Branding</a>
                         </div>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
-    <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+    <script src="js/jquery.viewbox.min.js" type="text/javascript"></script>
     <script src="js/wow.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
