--- a/videos.html
+++ b/videos.html
@@ -149,16 +149,16 @@
                 </div>
             </div>
             <div class="row vides-wraper">
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item1 current wow fadeIn" data-wow-duration="2s">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
+                        <a class="type-button-link-1" href="javascript:void(0);">2D Animation</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item2 wow fadeIn" data-wow-duration="2s">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
@@ -167,7 +167,7 @@
                         <a class="type-button-link-2" href="javascript:void(0);">3D Animation</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item3 wow fadeIn" data-wow-duration="2s">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
