--- a/website.html
+++ b/website.html
@@ -9,7 +9,7 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-    <title>SGS - App</title>
+    <title>SGS - Website</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700" rel="stylesheet">
@@ -26,7 +26,7 @@
     <![endif]-->
 </head>
 
-<body id="app-page" class="page">
+<body id="website-page" class="page">
     <!--   /*================ Header ================*/-->
     <header class="main-header">
         <div class="container relative">
@@ -62,7 +62,7 @@
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
-                    <h2><span>Mobile</span>Application </h2>
+                    <h2><span>CUSTOM</span>WEBSITE </h2>
                 </div>
             </div>
         </div>
@@ -114,12 +114,15 @@
         </div>
     </section>
     <!--    /*================ Video ================*/-->
-    <section class="ecommerce-store app-style wow fadeIn" data-wow-duration="2s">
+    <section class="ecommerce-store wow fadeIn" data-wow-duration="2s">
         <div class="container">
             <div class="row disply-flex">
+                <div class="col-md-7 col-sm-6">
+                    <img src="images/website-bg.png" alt="" class="img-responsive">
+                </div>
                 <div class="col-md-5 col-sm-6">
-                    <h3>App with Style</h3>
-                    <p>Whether you are looking to build a career site for your company, a recruitment portal for your agency or to launch and grow a job site, we have the perfect theme for you to select and easily customise. </p>
+                    <h3>Stylish Website</h3>
+                    <p>Whether you are looking to build a career site for your company, a recruitment portal for your agency or to launch and grow a job site, we have the perfect theme for you to select and easily customise.  </p>
                 </div>
             </div>
         </div>
@@ -130,7 +133,7 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <div class="head">
-                        <h2>Get Started with us</h2>
+                        <h2>Let’s make your Awesome Website Today </h2>
                     </div>
                     <h2>If pictures are worth a thousand words, then videos a million <br> sales increase. Let's make that awesome <br> video for you today!</h2>
                 </div>
@@ -141,37 +144,37 @@
     <section class="video-type clearfix">
         <div class="container">
             <div class="row vides-wraper">
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item1 current wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
-                            <img src="images/android.png" class="img-responsive" alt="">
+                            <img src="images/personal.png" class="img-responsive" alt="">
                         </div>
-                        <img src="images/app-service-1.jpg" class="img-responsive" alt="">
+                        <div class="border-text">Lets get your personal website up and running</div>
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-1 current" href="javascript:void(0);">Android</a>
+                        <a class="type-button-link-1 " href="javascript:void(0);">Personal</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item2 wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
-                            <img src="images/apple.png" class="img-responsive" alt="">
+                            <img src="images/group.png" class="img-responsive" alt="">
                         </div>
-                        <img src="images/app-service-2.jpg" class="img-responsive" alt="">
+                        <div class="border-text">Lets get your business website up and running</div>
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-2" href="javascript:void(0);">iOS</a>
+                        <a class="type-button-link-2" href="javascript:void(0);">Business</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item wow fadeIn" data-wow-duration="2s">
+                <div class="col-md-4 col-sm-4 videos-item item3 wow fadeIn" data-wow-duration="2s">
                     <div class="app-thumbnail">
                         <div class="img-small">
-                            <img src="images/android&app.png" class="img-responsive" alt="">
+                            <img src="images/sqeare.png" class="img-responsive" alt="">
                         </div>
-                        <img src="images/app-service-3.jpg" class="img-responsive" alt="">
+                        <div class="border-text">Lets get your personal website up and running</div>
                     </div>
                     <div class="type-button">
-                        <a class="type-button-link-3" href="javascript:void(0);">Android & iOS</a>
+                        <a class="type-button-link-3" href="javascript:void(0);">Custom</a>
                     </div>
                 </div>
             </div>
@@ -214,9 +217,9 @@
                                 </div>
                                 <div class="text-field text select-type">
                                     <select class="video-select-type">
-                                        <option value='the_title_value1'>Android</option>
-                                        <option value='the_title_value2'>iOS</option>
-                                        <option value='the_title_value3'>Android & iOS</option>
+                                        <option value='the_title_value1'>Personal</option>
+                                        <option value='the_title_value2'>Business</option>
+                                        <option value='the_title_value3'>Custom</option>
                                         </select>
                                     <div class="lines"></div>
                                 </div>
@@ -250,19 +253,19 @@
                 </div>
                 <div class="hidden-it">
                     <div class="detailes-video app-detailes">
-                        <h3 class="title1">Android</h3>
+                        <h3 class="title1">Personal</h3>
                         <p class="day1">6</p>
                         <p class="minute1">YES</p>
                         <p class="price1">50000</p>
                     </div>
                     <div class="detailes-video app-detailes">
-                        <h3 class="title2">iOS</h3>
+                        <h3 class="title2">Business</h3>
                         <p class="day2">7</p>
                         <p class="minute2">No</p>
                         <p class="price2">60000</p>
                     </div>
                     <div class="detailes-video app-detailes">
-                        <h3 class="title3">Android & iOS</h3>
+                        <h3 class="title3">Custom</h3>
                         <p class="day3">8</p>
                         <p class="minute3">YES</p>
                         <p class="price3">70000</p>
