--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <meta name="author" content="">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
-    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>SGS - Contact</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,19 +39,19 @@
                     <div class="sgs-responsive-menu"></div>
                     <div class="main-menu">
                         <ul id="main-menu">
-                            <li><a href="about.html">Services</a></li>
-                            <li><a href="portfolio.html">Portfolio</a>
+                            <li><a href="about.html">Who We Are</a></li>
+                            <li><a href="#">Services</a>
                                 <ul>
-                                    <li><a href="#">Dropdown One</a></li>
-                                    <li><a href="#">Dropdown Two</a></li>
-                                    <li><a href="#">Dropdown Three</a></li>
-                                    <li><a href="#">Dropdown Four</a></li>
-                                    <li><a href="#">Dropdown Five</a></li>
+                                    <li><a href="website.html">Website Development</a></li>
+                                    <li><a href="videos.html">Promotional Video</a></li>
+                                    <li><a href="ecommerce.html">Ecommerce</a></li>
+                                    <li><a href="app.html">Mobile App Development</a></li>
+                                    <li><a href="branding.html">Corporate Branding</a></li>
+                                    <li><a href="soluation.html">Custom Idea Development</a></li>
                                 </ul>
                             </li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="contact.html">Support</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
